@@ -57,6 +57,7 @@ Cacti CHANGELOG
 -feature: New cli command host_update_template to allow re-templating of hosts using an updated template
 -feature: When reindexing hosts, allow a queryid to be specified
 -feature: Add command line Database upgrade script
+-feature: Add api call to associate graphs with their data sources
 
 0.8.7b
 -bug#0000855: Unnecessary (and faulty) DEF generation for CF:AVERAGE
